Solucionado error ventanas